fix: Made the top header nav links align in block on top of each other.

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -8,6 +8,7 @@
 		margin-right: 25px;
 	}
 	#main-menu li {
+		display: none;
 		padding: 5px 12px;
 	}	
 	.cat_list {
